--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -24,8 +24,10 @@ jobs:
         cache: 'sbt'
     - name: Check format
       run: sbt checkFormat
-    - name: Lint
-      run: sbt lint
+    - name: Scalafix Lint
+      run: sbt scalafixLint
+    - name: Scapegoat Lint
+      run: sbt scapegoatLint
     - name: Run tests
       run: sbt testCoverage
       # Optional: This step uploads information to the GitHub dependency graph and unblocking Dependabot alerts for the repository
