--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -30,6 +30,8 @@ jobs:
       run: sbt scapegoatLint
     - name: Run tests
       run: sbt testCoverage
+      #- name: DependencyCheck
+      #  run: sbt -v -Dfile.encoding=UTF-8 dependencyCheck
       # Optional: This step uploads information to the GitHub dependency graph and unblocking Dependabot alerts for the repository
-      # - name: Upload dependency graph
-    #  uses: scalacenter/sbt-dependency-submission@ab086b50c947c9774b70f39fc7f6e20ca2706c91
+      #- name: Upload dependency graph
+      #uses: scalacenter/sbt-dependency-submission@ab086b50c947c9774b70f39fc7f6e20ca2706c91
