--- a/.github/workflows/dependency-graph.yml
+++ b/.github/workflows/dependency-graph.yml
@@ -1,9 +1,8 @@
 # .github/workflows/dependency-graph.yml
 name: Update Dependency Graph
 on:
-  push:
-    branches:
-      - main # default branch of the project
+  workflow_dispatch:
+
 jobs:
   dependency-graph:
     name: Update Dependency Graph
