adding test report

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,9 @@ jobs:
       run: sbt scalafixLint
     - name: Scapegoat Lint
       run: sbt scapegoatLint
-    - name: Run tests
+    - name: Run tests with coverage Report
       run: sbt testCoverage
+    - uses: codecov/codecov-action@v3
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        fail_ci_if_error: true
