--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,12 +16,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    - uses: VirtusLab/scala-cli-setup@v0.2.1
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: 'sbt'
+        jvm: adopt:11
     - name: Check format
       run: sbt checkFormat
     - name: Scalafix Lint
@@ -30,7 +27,14 @@ jobs:
       run: sbt scapegoatLint
     - name: Run tests with coverage Report
       run: sbt testCoverage
-    - uses: codecov/codecov-action@v3
+#    - uses: codecov/codecov-action@v3
+#      with:
+#        token: ${{ secrets.CODECOV_TOKEN }}
+#        fail_ci_if_error: true
+    - name: Test coverage report
+      uses: irongut/CodeCoverageSummary@v1.3.0
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        fail_ci_if_error: true
+        filename: target/scala-2.13/coverage-report/cobertura.xml
+        format: markdown
+        badge: true
+        output: both
