--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,7 @@
 name: Continuous Integration
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -16,12 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    - uses: VirtusLab/scala-cli-setup@v0.2.1
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: 'sbt'
+        jvm: adopt:11
     - name: Check format
       run: sbt checkFormat
     - name: Scalafix Lint
