--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -17,3 +17,5 @@ jobs:
   call-unit-tests:
     needs: call-build-and-lint
     uses: ./.github/workflows/test.yml
+    secrets:
+      codecov-token: ${{ secrets.CODECOV_TOKEN }}
