--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,31 +6,37 @@ on:
   pull_request:
     branches: [ "master" ]
 
+concurrency:
+  group: ${{ github.ref }}-${{ github.workflow }}
+  cancel-in-progress: true
+
 permissions:
   contents: read
 
 jobs:
-  build:
-
+  format_compile_lint:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: 'sbt'
-    - name: Check format
-      run: sbt checkFormat
-    - name: Scalafix Lint
-      run: sbt scalafixLint
-    - name: Scapegoat Lint
-      run: sbt scapegoatLint
-    - name: Run tests with coverage Report
-      run: sbt testCoverage
-    - uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        fail_ci_if_error: true
+      - uses: actions/checkout@v3
+      - uses: VirtusLab/scala-cli-setup@v0.2.1
+        with:
+          jvm: adopt:11
+      - name: Check format
+        run: sbt checkFormat
+      - name: Scalafix Lint
+        run: sbt scalafixLint
+      - name: Scapegoat Lint
+        run: sbt scapegoatLint
+  unit_test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: VirtusLab/scala-cli-setup@v0.2.1
+        with:
+          jvm: adopt:11
+      - name: Run tests with coverage Report
+        run: sbt testCoverage
+      - uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
